# smlx

./: .gitattributes  .gitignore  CLAUDE.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  setup.py  test_swin_encoder.py
.github/workflows/: ci.yml
chat/: README.md  package.json
chat/src/: App.tsx  index.css
data/: README.md
data/audio/: README.md
data/documents/: README.md
data/images/: README.md
docs/: Agents.md  BENCHMARKS.md  CHATTERBOX_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CONVERSION_INDEX.md  CONVERSION_PATTERNS.md  CONVERSION_REFERENCE.md  CONVERSION_UPDATE_SUMMARY.md  DATASETS.md  DATA_DOWNLOAD_STATUS.md  DATA_MODULE.md  DATA_MODULE_TESTS.md  EVALUATION.md  EnhancedCache.md  Eval.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MODEL_EXECUTION_FRAMEWORK.md  MODEL_STATUS.md  MemoryManagement.md  ModelImplementations.md  ORPHEUS_IMPLEMENTATION_SUMMARY.md  OUTPUT_QUALITY_SAFEGUARDS.md  PerformanceOptimization.md  Q4_0_OPTIMIZATION_SUMMARY.md  QUANTIZATION_INTEGRATION_SUMMARY.md  QUANTIZATION_RESEARCH_REPORT.md  QUICKSTART.md  Quant.md  RESOURCES_INDEX.md  RESOURCES_PATTERNS.md  RESOURCES_QUICK_START.md  RESOURCES_REFERENCE_MAP.md  Server.md  TESTING.md  TESTING_GUIDE.md  TEST_RESULTS.md  TINYLLAVA_INTEGRATION_SUMMARY.md  TINYLLAVA_SUCCESS_SUMMARY.md  Tools.md  (+6 more)
docs/models/: YAMNet_weights.md
docs/plans/: 2026-06-07-production-ready-model-zoo.md  2026-06-07-unified-model-runner.md  2026-06-08-all-models-real.md  2026-06-08-zero-fake-codebase.md
docs/tools/: MemoryMetrics.md
examples/: example_runner.py
examples/agents/: basic_agent_example.py  cot_agent_example.py  multi_agent_example.py  react_agent_example.py
examples/cache/: enhanced_cache_demo.py
examples/eval/: README.md  text_eval_example.py  vlm_eval_example.py
examples/gym/: README.md  basic_cartpole.py  benchmark_example.py  dqn_cartpole.py  text_environment.py  wrappers_example.py
examples/performance/: optimization_demo.py
examples/quant/: README.md  awq_example.py  comparison_example.py  complete_integration_example.py  fp4_comparison.py  gptq_example.py  loader_integration_example.py  lora_example.py  mxfp8_quantization.py  q4_k_m_benchmark.py  qlora_example.py
examples/server/: README.md  client_example.py  openai_compatible.py  quantization_example.py
examples/showcase/: README.md  minilm_semantic_search.py  smollm2_wikitext_perplexity.py  smolvlm_coco8_vqa.py  whisper_librispeech_wer.py
examples/tools/: memory_metrics_example.py
scripts/: preview_data.py  run_integration_tests.py  validate_data.py
smlx/: main.py
smlx/agents/: README.md  __init__.py  base.py  cot.py  memory.py  react.py  rl_agent.py  tools.py
smlx/bench/: __init__.py  report.py  run.py  runners.py  stats.py
smlx/config/: __init__.py  inclusion_policy.py  memory.py  model_profiles.py
smlx/data/: __init__.py  augmentation.py  batch.py  datasets.py  hf.py  loaders.py  local.py  preprocessing.py  report.py
smlx/evals/: __init__.py  audio_eval.py  lm_harness.py  math_vista.py  mmmu.py  mmstar.py  ocrbench.py  rl_eval.py  text_eval.py  utils.py
smlx/gym/: __init__.py  base.py  curriculum.py  multi_agent.py  replay.py  spaces.py  wrappers.py
smlx/kv_cache/: __init__.py  alibi.py  cache_limits.py  cache_trace.py  kv_manager.py  memory_pressure_gauge.py  mlx_kv.py  pressure_breaker.py  rope.py
smlx/models/: __init__.py  cad.py  mlx_backend.py  registry.py  runner.py  runner_adapters.py  runner_verify.py  smlx_manager.py  smlx_router.py  smlx_runner.py
smlx/quant/: 4bit.py  6bit.py  8bit.py  FP8_MIGRATION.md  Q4_K_IMPLEMENTATION_NOTES.md  __init__.py  autoquant.py  awq.py  bf16.py  dora.py  dwq.py  dynamic_quant.py  fp4.py  fp8.py  gptq.py  lora.py  mixed_3_6.py  mixed_bit.py  mlx_mixed.py  mxfp4.py  mxfp8.py  q4_0.py  q4_1.py  q4_k_m.py  q6_k.py  q8_0.py  utils.py
smlx/server/: __init__.py  app.py  dependencies.py  model_manager.py  schemas.py
smlx/tools/: __init__.py  compare_results.py  convert2mlx.py  convert_yamnet.py  download.py  download_data.py  memory_metrics.py  quantize.py
smlx/utils/: __init__.py  audio.py  batch.py  cache.py  chat_templates.py  config.py  debug.py  degradation.py  formatting.py  generation.py  io.py  loading.py  memory.py  profiling.py  quality_metrics.py  quantization.py  robust.py  sampling.py  stats.py  timing.py  trace.py  validation.py  vision.py  vlm_diagnostics.py  watchdog.py
tests/: conftest.py  test_inclusion_policy.py  test_packaging.py
tests/bench/: test_report.py  test_run.py  test_runners.py  test_stats.py
tests/data/: __init__.py  test_augmentation.py  test_batch.py  test_datasets.py  test_hf.py  test_loaders.py  test_preprocessing.py
tests/evals/: conftest.py  test_lm_harness.py  test_math_vista.py  test_mmmu.py  test_mmstar.py  test_ocrbench.py  test_rl_eval.py  test_text_eval.py
tests/gym/: test_curriculum.py  test_multi_agent.py  test_replay.py  test_rl_agent.py  test_text_world.py  test_wrappers.py
tests/integration/: test_all_minilm_l6_v2.py  test_chatterbox.py  test_chatterbox_integration.py  test_donut.py  test_minilm.py  test_moondream2.py  test_nanovlm.py  test_orpheus.py  test_silerovad.py  test_smolgencad.py  test_smollm2_360m.py  test_smollm2_generation.py  test_smolvlm_256m.py  test_smolvlm_500m_instruct.py  test_tinyllava.py  test_trocr_small.py  test_validation_integration.py  test_whisper_streaming_partials.py  test_whisper_tiny.py  test_yamnet.py  test_yamnet_weights.py
tests/kv_cache/: test_alibi.py  test_cache_limits.py  test_cache_trace.py  test_kv_manager.py  test_memory_pressure_gauge.py  test_mlx_kv.py  test_pressure_breaker.py  test_rope.py
tests/models/: test_chatterbox.py  test_chatterbox_vocoder.py  test_common_attention.py  test_common_mlp.py  test_common_switch_layers.py  test_donut_base.py  test_gate_public_paths.py  test_minilm.py  test_moondream2.py  test_nanovlm.py  test_orpheus_vocoder.py  test_runner.py  test_smlx_manager.py  test_smlx_router.py  test_smlx_runner.py  test_smollm2_135m.py  (+6 more)
tools/: debug_nanovlm_generation.py  diagnose_vlm_gibberish.py
(+533 files in other folders)
