[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smlx"
version = "0.1.0"
description = "Smol MLX - Small models (vision, voice, multimodal) for Apple MLX on M4 chipsets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ryan O'Boyle"},
]
keywords = ["mlx", "apple-silicon", "machine-learning", "vision", "multimodal", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies - Add new required dependencies here
dependencies = [
    "mlx>=0.14.0",
    "numpy>=1.24.0",
    "huggingface-hub>=1.0",
    # transformers 5.x is required by current mlx-lm/mlx-audio; mlx-vlm>=0.6 is the
    # transformers-5-compatible line (mlx-vlm 0.3.x breaks on Qwen2-VL with 5.x).
    "transformers>=5.5.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "word2number>=1.1",
    "psutil>=5.9.0",  # runtime memory profiling (smlx.models.smlx_manager) — required to import smlx.models
    "safetensors>=0.4.0",  # weight loading/conversion is used across core model loaders
    "mlx-lm>=0.31.0",  # correct upstream MLX language-model implementations (smlx.models.mlx_backend)
    "mlx-vlm>=0.6.0",  # correct upstream MLX vision-language implementations (smlx.models.mlx_backend)
    "num2words>=0.5.0",  # required by some mlx-vlm processors (e.g. SmolVLM) for number normalization
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    # Required by pytest.ini: --timeout/--timeout-method (pytest-timeout) and
    # asyncio_mode=auto (pytest-asyncio). Without these a clean install fails
    # collection with "unrecognized arguments: --timeout".
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "psutil>=5.9.0",  # Memory monitoring for tests
]

# Evaluation/benchmark dependencies
evals = [
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "mlx-vlm>=0.1.0",  # Vision-language model support for multimodal evals
    "jiwer>=3.0.0",  # Word Error Rate (WER) and Character Error Rate (CER) for audio evals
    "matplotlib>=3.7.0",  # For visualizing evaluation results and benchmarks
    # Add more eval-specific dependencies here
]

# Server dependencies
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    # Add more server-specific dependencies here
]

# Quantization dependencies
quant = [
    "scipy>=1.11.0",
    # Add quantization-specific dependencies here
]

# Agent dependencies
agents = [
    "gymnasium>=0.29.0",  # OpenAI Gym API for RL environments
    # Add agent-specific dependencies here when implemented
]

# Gym/RL dependencies
gym = [
    "gymnasium>=0.29.0",  # OpenAI Gym API for RL environments
    "matplotlib>=3.7.0",  # For visualizing training metrics and results
]

# Vision/multimodal dependencies
vision = [
    "opencv-python>=4.8.0",
    "torchvision>=0.15.0",  # May be needed for some preprocessing
    # Add vision-specific dependencies here
]

# Audio dependencies
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # Real, trained-weights TTS: mlx-audio provides Kokoro-82M (intelligible
    # speech); misaki[en] is Kokoro's English G2P front-end. Used by
    # `smlx run kokoro`. Without these, only the untrained Orpheus/Chatterbox
    # (PIPELINE-ONLY noise) TTS entries are available.
    "mlx-audio>=0.4.0",
    "misaki[en]>=0.7.0",
    # Real Silero VAD v5 via onnxruntime (`smlx run silero-vad`). silero-vad
    # bundles the ONNX model; the runner reads it WITHOUT importing the package
    # (so no torch is pulled), with a Hub download as fallback.
    "onnxruntime>=1.16.0",
    "silero-vad>=5.1",
]

# Tools dependencies (for model conversion and downloading)
tools = [
    "safetensors>=0.4.0",
    # Add tool-specific dependencies here
]

# MLX ecosystem libraries (for reference and pattern borrowing)
# Install these to use reference implementations from resources/
mlx-ecosystem = [
    "mlx-lm>=0.10.0",
    "mlx-vlm>=0.1.0",
    # Add more MLX ecosystem libraries here
]

# All optional dependencies
all = [
    "smlx[dev]",
    "smlx[evals]",
    "smlx[server]",
    "smlx[quant]",
    "smlx[agents]",
    "smlx[gym]",
    "smlx[vision]",
    "smlx[audio]",
    "smlx[tools]",
    "smlx[mlx-ecosystem]",
]

[project.urls]
Homepage = "https://github.com/LayerDynamics/smlx"
Repository = "https://github.com/LayerDynamics/smlx"
Issues = "https://github.com/LayerDynamics/smlx/issues"

[project.scripts]
smlx = "smlx.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smlx*"]
exclude = ["tests*", "resources*"]

[tool.setuptools.package-data]
smlx = ["py.typed"]

# Pytest configuration is in pytest.ini (takes precedence over pyproject.toml)
# See pytest.ini for all pytest settings

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | resources
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "resources",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mlx.*",
    "transformers.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true
